# chess-bot

./: .gitignore  Coach.py  MCTS.py  PROGRESS.md  README.md  bench.py  board.py  elo.py  main.py  notes.txt  profiler.py  pyproject.toml  train.py  train_colab.ipynb  training.py  tui.py  uci_engine.py  utils.py
.claude/: settings.json  settings.local.json
alphazero_general/: Arena.py  Coach.py  Game.py  MCTS.py  NeuralNet.py
chessbot/: ChessBoard.py  ChessGame.py  ChessNNet.py  cboard.cp313-win_amd64.pyd  ui_utils.py
chessbot/cboard/: CMakeLists.txt  board.cpp  move_gen.h
